[package]
name = "rogpow"
version = "0.1.0"
authors = ["romdotdog"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
argon2rs = { path = "./argon2rs", features = [] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 3
